Updated the text to make the UX much better.

--- a/index.html
+++ b/index.html
@@ -193,16 +193,16 @@
       <div class="buttons" id="area">
         <button id="yes">Yes</button>
         <button id="no">No</button>
-        <button id="no1">No</button>
-        <button id="no2">No</button>
-        <button id="no3">No</button>
-        <button id="no4">No</button>
-        <button id="no5">No</button>
-        <button id="no6">No</button>
-        <button id="no7">No</button>
-        <button id="no8">No</button>
-        <button id="no9">No</button>
-        <button id="no10">No</button>
+        <button id="no1">Really?</button>
+        <button id="no2">Think Again!</button>
+        <button id="no3">Please!</button>
+        <button id="no4">Don't Do this!</button>
+        <button id="no5">I'll be sad🥺</button>
+        <button id="no6">Give me a chance!😭</button>
+        <button id="no7">Please!</button>
+        <button id="no8">Please!!</button>
+        <button id="no9">Please!!!☹️</button>
+        <button id="no10">You are my Pookiee!! Please</button>
       </div>
 
       <div class="message" id="msg">I love you too❤️</div>
